fixed overflow

--- a/app/assets/src/scss/application/sections/_header-collapse.scss
+++ b/app/assets/src/scss/application/sections/_header-collapse.scss
@@ -366,7 +366,8 @@
 
             &-active {
                 padding: 28px 0 0;
-                max-height: 533px;
+                max-height: 560px;
+                overflow: scroll;
             }
 
             &-header {
